# linux-dynamic-wallpapers-reborn

./: 2static1dynamic.sh  README.md  easy-install.sh  full-install-manual.sh  full-install-remote.sh  full-install.sh  interactive-install.sh  meson.build
Dynamic_Wallpapers/: BlobsAnimated.xml  Earth.xml
dynamic-wallpapers/: Adwaita.xml  AnimeRoomBoard.xml  Aura.xml  BigSur.xml  BigSurV2.xml  Blobs.xml  BlobsAnimated.xml  Carvan.xml  Catalina.xml  CatherineRoom.xml  ChromeDeepDarkPurple.xml  ChromeOSBlues.xml  ChromeOSEarth.xml  ChromeOSFire.xml  ChromeOSGreens.xml  ChromeOSReds.xml  ChromeOSWater.xml  ChromeOSWind.xml  ChromeOSYellows.xml  Coast.xml  Color-Wave-Blue-Purple.xml  Color-Wave-Green-Blue.xml  Color-Wave-Orange.xml  Color-Wave-Pink-Orange.xml  Color-Wave-Purple.xml  Color-Wave-Yellow.xml  CorporationHall.xml  CorporationStreet.xml  DeadTree.xml  Desert.xml  DesertPeak.xml  DesertSands.xml  DesertTree.xml  DesertValley.xml  Disco.xml  Dome.xml  Drool.xml  DynamicFry.xml  EOS-SnowCappedMountain.xml  EOS-Sunset.xml  (+109 more)
tests/: check_names.py
utils/: change-naming.sh
xml/: Adwaita.xml  AnimeRoomBoard.xml  Aura.xml  BigSur.xml  BigSurV2.xml  Blobs.xml  BlobsAnimated.xml  Carvan.xml  Catalina.xml  CatherineRoom.xml  ChromeDeepDarkPurple.xml  ChromeOSBlues.xml  ChromeOSEarth.xml  ChromeOSFire.xml  ChromeOSGreens.xml  ChromeOSReds.xml  ChromeOSWater.xml  ChromeOSWind.xml  ChromeOSYellows.xml  Coast.xml  Color-Wave-Blue-Purple.xml  Color-Wave-Green-Blue.xml  Color-Wave-Orange.xml  Color-Wave-Pink-Orange.xml  Color-Wave-Purple.xml  Color-Wave-Yellow.xml  DeadTree.xml  (+122 more)
